# bazel-playground

./: BUILD.bazel  MODULE.bazel  README.md  jbr_rule.bzl  run.cmd
src/: Main.java
