load("//:jbr_rule.bzl", "jbr_rule")
load("@rules_java//java:java_library.bzl", "java_library")

java_library(
    name = "test_lib",
    srcs = ["src/Main.java"]
)


jbr_rule(
    name = "test_launcher",
    main_class = "Main",
    jbr_files = "@jbr_jcef_21_windows_x64//:jbr_files",
    test_jar = ":test_lib",
)