http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "rules_java", version = "8.10.0")

http_archive(
  name = "jbr_jcef_21_windows_x64",
  url = "https://cache-redirector.jetbrains.com/intellij-jbr/jbr_jcef-21.0.6-windows-x64-b919.9.zip",
  sha256 = "d8b9d82639c148e4db540a74bc4574910107fe7693288f1f936705d6836e90f8",
  strip_prefix = "jbr_jcef-21.0.6-windows-x64-b919.9",
  build_file_content = """
filegroup(
    name = "jbr_files",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
"""
)
